Added the images and tittle to homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nav's Portfolio</title>
+    <title>Personal Site: Homepage</title>
 </head>
 <body>
     <h1>Nav's Portfolio</h1>
