--- a/index.html
+++ b/index.html
@@ -7,14 +7,31 @@
 </head>
 <body>
     <h1>Nav's Portfolio</h1>
-    <main>
-        <section>
-            <h2>Projects</h2>
-            <al>
-                <li><a href="personalsite/index.html">Personal Site</a></li>
-            </al>
-        </section>
-    </main>
+    <p><img srcc = "personalsite/images/navpicturesmall.jpg" alt = "My profile photo" width = "500" height="499"></p>
+    <p>Hi! My name is Navneet Malhi. Welcome to my portfolio website!
+        I’m currently a student based in Davis, CA.
+        I’m passionate about technology and design. 
+        I built this website to share a bit about who I am, what I do, and what inspires me.
+    </p>
     
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="where.html">Where I live</a></li>
+            <li><a href="work.html">What I do</a></li>
+            <li><a href="interests/index.html">My Interests</a>
+                <ul>
+                    <li><a href="interest/travel.html">Traveling</a></li>
+                    <li><a href="interest/gym.html">Gym</a></li>
+                    <li><a href="interest/drive.html">Driving</a></li>
+
+                </ul>
+            </li>
+
+        </ul>
+
+
+    </nav>
+
 </body>
 </html>
