--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="where.html">Where I live</a></li>
+            <li><a href="personalsite/where.html">Where I live</a></li>
             <li><a href="work.html">What I do</a></li>
             <li><a href="interests/index.html">My Interests</a>
                 <ul>
