--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Nav's Portfolio</h1>
-    <p><img srcc = "personalsite/images/navpicturesmall.jpg" alt = "My profile photo" width = "500" height="499"></p>
+    <p><img srcc = "/Users/nav/Web Programming/Module 3/Personalwebsite/personalsite/images/navpicturesmall.jpg" alt = "My profile photo" width = "500" height="499"></p>
     <p>Hi! My name is Navneet Malhi. Welcome to my portfolio website!
         I’m currently a student based in Davis, CA.
         I’m passionate about technology and design. 
