fixed image code

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Nav's Portfolio</h1>
-    <p><img srcc = "/Users/nav/Web Programming/Module 3/Personalwebsite/personalsite/images/navpicturesmall.jpg" alt = "My profile photo" width = "500" height="499"></p>
+    <p><img src = "images/navpicturesmall.jpg" alt = "My profile photo" width = "500" height="499"></p>
     <p>Hi! My name is Navneet Malhi. Welcome to my portfolio website!
         I’m currently a student based in Davis, CA.
         I’m passionate about technology and design. 
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="personalsite/where.html">Where I live</a></li>
+            <li><a href="where.html">Where I live</a></li>
             <li><a href="work.html">What I do</a></li>
             <li><a href="interests/index.html">My Interests</a>
                 <ul>
