--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -21,9 +21,9 @@
             <li><a href="work.html">What I do</a></li>
             <li><a href="interests/index.html">My Interests</a>
                 <ul>
-                    <li><a href="interest/travel.html">Traveling</a></li>
-                    <li><a href="interest/gym.html">Gym</a></li>
-                    <li><a href="interest/drive.html">Driving</a></li>
+                    <li><a href="interests/travel.html">Traveling</a></li>
+                    <li><a href="interests/gym.html">Gym</a></li>
+                    <li><a href="interests/drive.html">Driving</a></li>
 
                 </ul>
             </li>
