added the what I do

--- a/where.html
+++ b/where.html
@@ -12,5 +12,26 @@
         Living here has really influenced the way I think and work. I love the local cafes and walking trails, and it’s one of the reasons I feel inspired to stay connected to nature and be productive at the same time.
     </p>
     
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="where.html">Where I live</a></li>
+            <li><a href="work.html">What I do</a></li>
+            <li><a href="interests/index.html">My Interests</a>
+                <ul>
+                    <li><a href="interests/travel.html">Traveling</a></li>
+                    <li><a href="interests/gym.html">Gym</a></li>
+                    <li><a href="interests/drive.html">Driving</a></li>
+
+                </ul>
+            </li>
+
+        </ul>
+
+
+    </nav>
+
+
 </body>
 </html>
