added nav to driving

--- a/interests/drive.html
+++ b/interests/drive.html
@@ -13,6 +13,25 @@
         It’s not just a hobby, it’s something that inspires me and keeps me motivated.
         I love being able to have quality time with myself and just think about my future. I always feel the most calm when driving and it helps me forget the daily stress of work and school.
     </p>
+
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../where.html">Where I live</a></li>
+            <li><a href="../work.html">What I do</a></li>
+            <li><a href="index.html">My Interests</a>
+                <ul>
+                    <li><a href="travel.html">Traveling</a></li>
+                    <li><a href="gym.html">Gym</a></li>
+                    <li><a href="drive.html">Driving</a></li>
+
+                </ul>
+            </li>
+
+        </ul>
+
+
+    </nav>
     
 </body>
 </html>
